<resources>
    <string name="app_name">Zoho People</string>
    <string name="snackbar_enable_gps">"Looks like your location is turned off. "</string>
    <string name="snackbar_bt_settings">GO TO SETTINGS</string>
    <string name="cd_location">Image of map with smiley sun</string>
    <string name="dialog_loc_title">Do you want to give location access?</string>
    <string name="dialog_loc_msg">Relax, your location data is safe. Current location is only used for weather updates.</string>
    <string name="bt_cancel">CANCEL</string>
    <string name="bt_ok">OKAY</string>
    <string name="welcome_heading">Hi, Welcome!</string>
    <string name="temp_cel">%1$d\u00B0C</string>
    <string name="aqi_string">AQI: %1$s \nPM-10: %2$d</string>
    <string name="not_applicable">NA</string>
    <string name="placeholder_text">Oops! Something\'s wrong!</string>
    <string name="cd_icon_person">Image of the person</string>

    <string name="email_string">Email: %1$s</string>
    <string name="phone_string">Phone: %1$s</string>
    <string name="dob_string">Date of Birth: %1$s</string>
    <string name="gender_string">Gender: %1$s</string>

</resources>